--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=/Users/ymunakata/desktop/phpstudy/bookapp/database.sqlite
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=/Users/ymunakata/desktop/phpstudy/bookapp/database/database.sqlite
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
